fixed fontsize and gap:

--- a/wordle/styles.css
+++ b/wordle/styles.css
@@ -88,7 +88,7 @@ h1 {
 
 .row {
     display: flex;
-    gap: 5px;
+    gap: 2px;
 }
 
 .key {
@@ -226,7 +226,7 @@ h1 {
     .cell {
         width: 60px;
         height: 60px;
-        font-size: 18px;
+        font-size: 30px;
     }
     .key {
         width: 30px;
